<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Downloader</string>

    <!-- Navigation drawer strings -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_max_parallel_download">Max parallel downloads</string>

    <!-- Actionbar strings -->
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_sort">Sort</string>
    <string name="action_filter">Filter</string>
    <string name="action_addnew">Add new</string>
    <string name="action_delete">Delete</string>
    <string name="action_pause">Pause</string>
    <string name="action_resume">Resume</string>
    <string name="action_selectall">Select All</string>
    <string name="action_home">Home</string>
    <string name="action_favourite">Favourite</string>
    <string name="action_history">History</string>
    <string name="tab_downloading">Downloading</string>
    <string name="tab_downloaded">Downloaded</string>
    <string name="tab_settings">Settings</string>
    <string name="tab_browse">Browse</string>

    <!-- Add New dialog strings -->
    <string name="addnew_title">Add new download</string>
    <string name="addnew_hint">Enter URL to download</string>
    <string name="addnew_username_hint">Username (optional)</string>
    <string name="addnew_password_hint">Password (optional)</string>
    <string name="addnew_show_password">Show password</string>
    <string name="addnew_error_empty">URL cannot be empty</string>
    <string name="addnew_error_invalid">URL is not valid</string>
    <string name="addnew_protocol_unsupported">Protocol not yet supported for downloading</string>
    <string name="addnew_request_invalid">Invalid url type/format</string>

    <!-- Pool configure dialog strings -->
    <string name="taskconfigure_title">Set parallel downloads</string>
    <string name="taskconfigure_sucess">Parallel downloads set to %d</string>

    <!-- Path configure dialog strings -->
    <string name="pathconfigure_title">Set download location</string>
    <string name="pathconfigure_sucess">Download location set to %s</string>

    <!-- Network configure dialog strings -->
    <string name="networkconfigure_title">Download network</string>

    <!-- Size limit configure dialog strings -->
    <string name="limitconfigure_title">Size limit</string>

    <!-- Downloads list strings -->
    <string name="download_date_notavailable">N/A</string>
    <string name="download_add_success">"%s added to the download queue"</string>
    <string name="download_add_fail">"Failed to add to the queue"</string>
    <string name="download_disconnected">"Disconnected at the moment"</string>
    <string name="download_delete">"Delete downloads"</string>
    <string name="download_delete_success">Deleted downloads</string>
    <string name="download_delete_fail">Failed to delete downloads</string>

    <plurals name="download_deleteconfirm">
        <item quantity="one">Do you want to delete following file?</item>
        <item quantity="other">Do you want to delete following files?</item>
    </plurals>
    <plurals name="download_fresh_added">
        <item quantity="one">One file has been added to the queue.</item>
        <item quantity="other">Some files has been added to the queue.</item>
    </plurals>

    <!-- Generic strings -->
    <string name="btn_ok">OK</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_delete">Delete</string>
    <string name="btn_continue">Continue</string>
    <string name="btn_pause">Pause</string>
    <string name="btn_resume">Resume</string>

    <!-- Settings strings -->
    <string name="title_generalconfiguration">GENERAL CONFIGURATION</string>
    <string name="title_storageconfiguration">STORAGE CONFIGURATION</string>
    <string name="title_connectionconfiguration">CONNECTION CONFIGURATION</string>
    <string name="title_sub_autostart">Auto start download</string>
    <string name="title_sub_aggregatenotification">Aggregate completed notifications</string>
    <string name="title_sub_downloadlocation">Default download location</string>
    <string name="title_sub_downloadsize">Download size warning</string>
    <string name="title_sub_downloads">Max number of parallel downloads</string>
    <string name="title_sub_downloadnetwork">Download only on</string>

    <!-- Settings formattablestrings -->
    <string name="title_size_configured">Warn when >= %1$s %2$s</string>
    <string name="title_network_wifi">Only when on wifi</string>
    <string name="title_network_any">On any network</string>

    <plurals name="tasks_configured">
        <item quantity="one">Download one by one</item>
        <item quantity="other">%d parallel downloads</item>
    </plurals>

    <!-- Network types the order depends on com.milanix.example.downloader.dialog.NetworkType -->
    <string-array name="networktype">
        <item>Only when on wifi</item>
        <item>On any network</item>
    </string-array>

    <!-- Orderng dialog -->
    <string name="title_sortby">Sort By</string>
    <string name="asc_added">Download added date</string>
    <string name="dsc_added">Download added date</string>
    <string name="asc_completed">Download completed date</string>
    <string name="dsc_completed">Download completed date</string>
    <string name="asc_size">Download file size</string>
    <string name="dsc_size">Download file size</string>

    <!-- Filter dialog -->
    <string name="title_filterby">Filter By</string>
    <string name="document">Document</string>
    <string name="code">Code</string>
    <string name="audio">Audio</string>
    <string name="image">Image</string>
    <string name="video">Video</string>
    <string name="archive">Archive</string>
    <string name="pdf">PDF</string>
    <string name="all">All</string>

    <!-- Notification strings -->
    <string name="download_size_exceeded_title">Download size exceeded</string>
    <string name="download_size_exceeded_message">File %1$s is over %2$s %3$s. Do you want to continue downloading?</string>
    <string name="download_size_unknown_title">Failed to determine download size</string>
    <string name="download_size_unknown_message">Failed to determine download size of file %s. Do you want to continue downloading?</string>
    <string name="download_completed_title">Download completed</string>
    <string name="download_failed_title">Download failed</string>
    <string name="download_completed_message">%1$s from %2$s</string>
    <string name="download_failed_message">%1$s from %2$s</string>

    <plurals name="download_completed_subtitle">
        <item quantity="one">Successfully downloaded %s</item>
        <item quantity="other">%d files sucessfully downloaded</item>
    </plurals>
    <plurals name="download_failed_subtitle">
        <item quantity="one">Failed to download %s</item>
        <item quantity="other">%d files failed to download</item>
    </plurals>

</resources>