<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dialog_background"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/dialog_title_background"
        android:orientation="horizontal"
        android:padding="@dimen/dialog_title_padding" >

        <ImageView
            android:id="@+id/iv_icon"
            android:layout_width="@dimen/dialog_icon_size"
            android:layout_height="@dimen/dialog_icon_size"
            android:src="@drawable/ic_action_addtoqueue_dark" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/dialog_title_padding"
            android:gravity="center_vertical"
            android:text="@string/addnew_title"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/text_color_light" />
    </LinearLayout>

    <EditText
        android:id="@+id/et_url"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/text_margin"
        android:ems="10"
        android:hint="@string/addnew_hint"
        android:inputType="textUri"
        android:singleLine="true" >

        <requestFocus />
    </EditText>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:divider="@drawable/divider"
        android:dividerPadding="0dip"
        android:orientation="vertical"
        android:showDividers="beginning" >

        <Button
            android:id="@+id/btn_ok"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:gravity="center"
            android:text="@string/btn_ok"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/text_color_dark" />
    </LinearLayout>

</LinearLayout>